@@ -38,6 +38,7 @@ import org.apache.hadoop.hdfs.protocol.LastUpdatedContentSummary;
 import org.apache.hadoop.hdfs.protocol.LastBlockWithStatus;
 import org.apache.hadoop.hdfs.protocol.LocatedBlock;
 import org.apache.hadoop.hdfs.protocol.LocatedBlocks;
+import org.apache.hadoop.hdfs.protocol.SnapshotInfo;
 import org.apache.hadoop.hdfs.protocol.proto.ClientNamenodeProtocolProtos;
 import org.apache.hadoop.hdfs.protocol.proto.AclProtos.GetAclStatusRequestProto;
 import org.apache.hadoop.hdfs.protocol.proto.AclProtos.GetAclStatusResponseProto;
@@ -162,6 +163,7 @@ import org.apache.hadoop.hdfs.protocol.proto.ClientNamenodeProtocolProtos.GetLas
 import org.apache.hadoop.hdfs.protocol.proto.HdfsProtos.DatanodeIDProto;
 import org.apache.hadoop.hdfs.protocol.proto.HdfsProtos.DatanodeInfoProto;
 import org.apache.hadoop.hdfs.protocol.proto.HdfsProtos.LocatedBlockProto;
+import org.apache.hadoop.hdfs.protocol.proto.HdfsProtos.SnapshotInfoProto;
 import org.apache.hadoop.hdfs.security.token.block.DataEncryptionKey;
 import org.apache.hadoop.hdfs.security.token.delegation.DelegationTokenIdentifier;
 import org.apache.hadoop.io.Text;
@@ -1093,8 +1095,26 @@ public class ClientNamenodeProtocolServerSideTranslatorPB
   @Override
   public ListSnapshotsResponseProto listSnapshots(RpcController controller,
       ListSnapshotsRequestProto request) throws ServiceException {
-    // TODO Auto-generated method stub
-    return null;
+    SnapshotInfo[] result;
+
+    try {
+      result = server.listSnapshots(request.getSnapshotRoot());
+      ListSnapshotsResponseProto.Builder builder = ListSnapshotsResponseProto
+          .newBuilder();
+      for (SnapshotInfo si : result) {
+        SnapshotInfoProto.Builder infobuilder = SnapshotInfoProto.newBuilder();
+        infobuilder.setSnapshotName(si.getSnapshotName());
+        infobuilder.setSnapshotRoot(si.getSnapshotRoot());
+        infobuilder.setCreateTime(si.getCreateTime());
+        infobuilder.setPermission(si.getPermission());
+        infobuilder.setOwner(si.getOwner());
+        infobuilder.setGroup(si.getGroup());
+        builder.addSnapshots(infobuilder);
+      }
+      return builder.build();
+    } catch (IOException e) {
+      throw new ServiceException(e);
+    }
   }
 
   @Override
