@@ -58,6 +58,7 @@ import org.apache.hadoop.hdfs.protocol.HdfsFileStatus;
 import org.apache.hadoop.hdfs.protocol.LastUpdatedContentSummary;
 import org.apache.hadoop.hdfs.protocol.LocatedBlock;
 import org.apache.hadoop.hdfs.protocol.LocatedBlocks;
+import org.apache.hadoop.hdfs.protocol.SnapshotInfo;
 import org.apache.hadoop.hdfs.protocol.UnregisteredNodeException;
 import org.apache.hadoop.hdfs.protocol.UnresolvedPathException;
 import org.apache.hadoop.hdfs.protocol.proto.ClientNamenodeProtocolProtos.ClientNamenodeProtocol;
@@ -1170,6 +1171,14 @@ class NameNodeRpcServer implements NamenodeProtocols {
   public void deleteSnapshot(String snapshotName, String snapshotRoot)
       throws IOException {
     // TODO Auto-generated method stub
+  }
+
+  @Override
+  public SnapshotInfo[] listSnapshots(String snapshotRoot) throws IOException {
+    // TODO Auto-generated method stub  
+    SnapshotInfo[] si = new SnapshotInfo[1];
+    si[0] = new SnapshotInfo(null, null, null, null, null, null);
+    return si;
   }
 
   @Override
